Fixed overlapping issue

--- a/client/public/css/login.css
+++ b/client/public/css/login.css
@@ -15,11 +15,9 @@ textarea{
 .form{
     background-color: #F3E779;
     font-family: "Consolas", "monaco", monospace;
-
-    display: grid;
+    min-width: 500px;
+    display: block;
     padding: 10px;
-
-
     border: 5px solid rgb(0, 0, 0);
     border-radius: 5px;
 
@@ -32,7 +30,8 @@ textarea{
 
     font-size: 26px;
 
-    margin-top: -90px;
+    margin-top: +100px;
+    overflow: hidden;
     
 
 }
@@ -63,8 +62,6 @@ textarea{
 .banner{
     background-color: #F3E779;
     font-family: "Arial Black", "Impact", "Courier New", monospace;
-
-    width: 1000px;
     display: grid;
     padding: 5px;
     margin-top: 10px;
@@ -87,13 +84,13 @@ textarea{
     font-size: 40px;
 
     box-sizing: border-box;
-    
+    overflow: hidden;
     
 }
 
 .loginHeader{
-    font-size: 40px;
-    margin-top: -50px;
+    font-size: 25px;
+    margin-top: -30px;
 }
 
 .loginPrompt{
@@ -111,12 +108,13 @@ textarea{
     border-radius: 0px;
 
     text-align: left;
-    font-size: 26px;
+    font-size: 23px;
     padding: auto;
     width: 330px;
     background-color: #cee3fd;
     display: grid;
     float: right;
+    position: relative;
 }
 
 /*password input*/
@@ -130,12 +128,13 @@ textarea{
     border-radius: 0px;
 
     text-align: left;
-    font-size: 26px;
+    font-size: 23px;
     padding: auto;
     width: 330px;
     background-color: #cee3fd;
     display: grid;
     float: right;
+    position: relative;
 }
 
 /*login button*/
@@ -156,7 +155,7 @@ textarea{
     /* border: 4px double #cccccc; */
     color: #eeeeee;
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
     padding: 12px;
     width: 400px;
     -webkit-transition: all 0.5s;
@@ -202,7 +201,7 @@ textarea{
     /* border: 4px double #cccccc; */
     color: #eeeeee;
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
     padding: 12px;
     width: 400px;
     -webkit-transition: all 0.5s;
